openvidu-server: updated certificate

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.address=0.0.0.0
 server.ssl.enabled=true
-server.ssl.key-store=classpath:openvidu-selfsigned.jks
+server.ssl.key-store=classpath:openvidu-selfsigned.p12
 server.ssl.key-store-password=openvidu
-server.ssl.key-store-type=JKS
-server.ssl.key-alias=openvidu-selfsigned
 server.servlet.session.cookie.name=OVJSESSIONID
 
 logging.level.root=info
