Add <version.openvidu.test.e2e> to parent pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 		<version.openvidu.java.client>2.20.0</version.openvidu.java.client>
 		<version.openvidu.client>1.1.0</version.openvidu.client>
 		<version.openvidu.test.browsers>1.1.0</version.openvidu.test.browsers>
+		<version.openvidu.test.e2e>1.1.1</version.openvidu.test.e2e>
 
 		<version.enforcer.plugin>3.0.0-M3</version.enforcer.plugin>
 		<version.extra.enforcer.rules.plugin>1.3</version.extra.enforcer.rules.plugin>
