--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -370,6 +370,24 @@
 			<version>${version.hamcrest}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.openvidu</groupId>
+			<artifactId>openvidu-test-browsers</artifactId>
+			<version>${version.openvidu.test.browsers}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>net.bytebuddy</groupId>
+					<artifactId>byte-buddy</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${version.powermock}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Test dependencies -->
 
