Add default REDIS_BINDING to docker-compose.yml

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -58,6 +58,7 @@ services:
         network_mode: host
         environment:
             - REDIS_PASSWORD=${OPENVIDU_SECRET}
+            - REDIS_BINDING=127.0.0.1
         logging:
             options:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
