--- a/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
+++ b/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
@@ -154,9 +154,7 @@ Resources:
           !Sub |
             #!/bin/bash -x
             set -eu -o pipefail
-            apt-get update && apt-get install -y \
-                python-pip \
-                ec2-instance-connect
+            apt-get update && apt-get install -y pip
             pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
 
             cfn-init --region ${AWS::Region} --stack ${AWS::StackId} --resource OpenviduServerCE
