openvidu-server, browser: Add Simulcast Publisher config
Simulcast is a per-Publisher configuration that allows to enable
Simulcast senders on the client's PeerConnection of each sender.

Simulcast is a WebRTC feature that sends multiple simultaneous streams
with different video qualities, in order to let the media server decide
which quality is best for which Subscriber on the receiving side.

Enabled by default.

--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -148,6 +148,12 @@
 			"defaultValue": 300
 		},
 		{
+			"name": "OPENVIDU_STREAMS_VIDEO_SIMULCAST",
+			"type": "java.lang.Boolean",
+			"description": "Send Simulcast video.",
+			"defaultValue": true
+		},
+		{
 			"name": "OPENVIDU_STREAMS_FORCED_VIDEO_CODEC",
 			"type": "java.lang.String",
 			"description": "Defines which video codec is being forced to be used in the browser/client",
