--- a/openvidu-server/deployments/enterprise/master-node/.env
+++ b/openvidu-server/deployments/enterprise/master-node/.env
@@ -247,6 +247,16 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
+# Send Simulcast video.
+# Publishers will encode duplicate video streams with different qualities,
+# so the media server is able to select the most appropriate quality stream
+# for each Subscriber.
+# This setting is honored only if OpenVidu Server was configured to use the
+# mediasoup media server. Otherwise, Simulcast will be disabled.
+# Values: true | false
+# Default: true
+#OPENVIDU_STREAMS_VIDEO_SIMULCAST=true
+
 # All sessions of OpenVidu will try to force this codec. If OPENVIDU_STREAMS_ALLOW_TRANSCODING=true
 # when a codec can not be forced, transcoding will be allowed
 # Values: VP8, VP9, H264, NONE
