--- a/openvidu-components-angular/projects/openvidu-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-angular/package.json
@@ -9,6 +9,7 @@
     "@angular/forms": "^13.0.0",
     "@angular/flex-layout": "^13.0.0-beta.36",
     "autolinker": "^3.14.3",
+    "buffer": "^6.0.3",
     "openvidu-browser": "^2.20.0"
   },
   "dependencies": {
