openvidu-components: Added webcomponent
Now it's possible generate a webcomponent using the openvidu-angular library.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ openvidu-components-angular/node_modules/
 openvidu-components-angular/.angular/
 
 openvidu-components-angular/dist/
+
+openvidu-components-angular/openvidu-webcomponent/
