--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -8,7 +8,9 @@
         "platform": "1.3.6",
         "semver": "7.3.5",
         "uuid": "8.3.2",
-        "wolfy87-eventemitter": "5.2.9"
+        "wolfy87-eventemitter": "5.2.9",
+        "events": "3.1.0",
+        "inherits": "2.0.3"
     },
     "description": "OpenVidu Browser",
     "devDependencies": {
