--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -4,7 +4,7 @@
         "freeice": "2.2.2",
         "hark": "1.2.3",
         "jsnlog": "2.30.0",
-        "mime-types": "2.1.34",
+        "mime": "3.0.0",
         "platform": "1.3.6",
         "semver": "7.3.5",
         "uuid": "8.3.2",
@@ -16,7 +16,6 @@
     "devDependencies": {
         "@types/node": "17.0.8",
         "@types/platform": "1.3.4",
-        "@types/mime-types": "2.1.1",
         "browserify": "17.0.0",
         "grunt": "1.4.1",
         "grunt-cli": "1.4.3",
