openvidu-server: rename Simulcast Publisher config
OPENVIDU_STREAMS_VIDEO_SIMULCAST --> OPENVIDU_WEBRTC_SIMULCAST

--- a/openvidu-server/deployments/enterprise/master-node/.env
+++ b/openvidu-server/deployments/enterprise/master-node/.env
@@ -247,16 +247,6 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
-# Send Simulcast video.
-# Publishers will encode duplicate video streams with different qualities,
-# so the media server is able to select the most appropriate quality stream
-# for each Subscriber.
-# This setting is honored only if OpenVidu Server was configured to use the
-# mediasoup media server. Otherwise, Simulcast will be disabled.
-# Values: true | false
-# Default: true
-#OPENVIDU_STREAMS_VIDEO_SIMULCAST=true
-
 # All sessions of OpenVidu will try to force this codec. If OPENVIDU_STREAMS_ALLOW_TRANSCODING=true
 # when a codec can not be forced, transcoding will be allowed
 # Values: MEDIA_SERVER_PREFERRED, NONE, VP8, VP9, H264
@@ -267,6 +257,16 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 # Values: true | false
 # Default value is false
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
+
+# Use Simulcast video on WebRTC Publishers.
+# Senders will encode duplicate video streams with different qualities,
+# so the media server is able to select the most appropriate quality stream
+# for each Subscriber.
+# This setting is honored only if OpenVidu Server was configured to use the
+# mediasoup media server. Otherwise, Simulcast will be disabled.
+# Values: true | false
+# Default: false
+#OPENVIDU_WEBRTC_SIMULCAST=true
 
 # Send openvidu-browser logs of clients to Elasticsearch
 # Possible values:
