openvidu-server: Add Simulcast Publisher config
Also add setting to the .env file for PRO deployments (which can be
converted into ENTERPRISE, using mediasoup)

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -255,6 +255,16 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 # Default value is false
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
 
+# Use Simulcast video on WebRTC Publishers.
+# Senders will encode duplicate video streams with different qualities,
+# so the media server is able to select the most appropriate quality stream
+# for each Subscriber.
+# This setting is honored only if OpenVidu Server was configured to use the
+# mediasoup media server. Otherwise, Simulcast will be disabled.
+# Values: true | false
+# Default: false
+#OPENVIDU_WEBRTC_SIMULCAST=false
+
 # Send openvidu-browser logs of clients to Elasticsearch
 # Possible values:
 # - disabled: Don't send logs. (default)
