openvidu-component: Loaded components dynamically
- For loading components with inputs/outputs directives, has been necessary to use the 'ng-dynamic-component' library because of unsupported on the official Angular issue  https://github.com/angular/angular/issues/15360
- Allowed the dynamic components load
- Grouped panels into panel component

--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "13.0.0",
     "autolinker": "3.14.3",
     "buffer": "^6.0.3",
+    "ng-dynamic-component": "10.1.0",
     "openvidu-browser": "2.21.0-beta1",
     "rxjs": "7.4.0",
     "tslib": "2.3.1",
