Tests for IceServerProperties. Integrate new attribute to Connection and generation token logic

--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -86,6 +86,11 @@
 			<version>${version.junit}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>${version.commons-validator}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
