deployment: external-turn - More explanatory comments at .env and certbot.sh

--- a/openvidu-server/deployments/external-turn/.env
+++ b/openvidu-server/deployments/external-turn/.env
@@ -1,10 +1,10 @@
 # The domain which is pointing to the public ip of the machine.
 TURN_DOMAIN_NAME=
 
-# If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for notifications
+# Valid certificate for letsencrypt
 LETSENCRYPT_EMAIL=
 
-# TURN fixed credentials. This parameter purpose is to support "TURN Server REST API".
+# TURN shared key with OpenVidu. This parameter purpose is to support "TURN Server REST API".
 # See:
 #   - https://tools.ietf.org/html/draft-uberti-behave-turn-rest-00
 #   - https://www.ietf.org/proceedings/87/slides/slides-87-behave-10.pdf
