--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -301,7 +301,7 @@ Metadata:
       OpenViduLicense:
         default: "OpenVidu Pro License key"
       OpenViduEdition:
-        default: "Which OpenVidu Edition you want to deploy: PRO or ENTERPRISE"
+        default: "Which OpenVidu Edition you want to deploy"
       MediaNodesStartNumber:
         default: "Initial number of Media Node in your cluster"
       OpenViduSecret:
