--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -11,7 +11,7 @@
 #
 #    This file will be overridden when update OpenVidu Platform
 #
-#    Openvidu Version: 2.20.0
+#    Openvidu Version: 2.21.0
 #
 #    Installation Mode: On Premises
 #
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server-pro:2.21.0-beta2
+        image: openvidu/openvidu-server-pro:2.21.0
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
@@ -57,7 +57,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     replication-manager:
-        image: openvidu/replication-manager:2.21.0-dev2
+        image: openvidu/replication-manager:2.21.0
         restart: always
         network_mode: host
         volumes:
@@ -84,7 +84,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:4.0.0-dev2
+        image: openvidu/openvidu-redis:4.0.0
         restart: always
         network_mode: host
         environment:
@@ -94,7 +94,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:6.0.0-dev2
+        image: openvidu/openvidu-coturn:6.0.0
         restart: on-failure
         network_mode: host
         env_file:
