Jenkinsfile: Show message to not fail in Kurento

--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -121,6 +121,7 @@ node('container') {
       stage ('OpenVidu Kurento E2E tests') {
         try {
           // openViduE2ETest("kurento/kurento-media-server:${KURENTO_MEDIA_SERVER_VERSION}")
+          echo 'Ignore Kurento'
         } catch (err) {
           // In case of error, fail the stage
           sh 'exit 1'
