deployment: Cache ffmpeg for AMIs on start media node

--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -103,6 +103,8 @@ Resources:
             "/usr/local/bin/testRecording.sh":
               content: |
                 #!/bin/bash -x
+                # This script checks the recording COMPOSED and cache it from AMIs to the EBS volume.
+                # https://serverfault.com/a/837118
                 TEST_RECORDING_DIR="/opt/openvidu/test-recording"
 
                 docker run -d --rm --name=test-recording -e URL=https://openvidu.io/ -v "${TEST_RECORDING_DIR}":/recordings openvidu/openvidu-recording:OPENVIDU_RECORDING_DOCKER_TAG
@@ -121,6 +123,11 @@ Resources:
                 # Clean test recording
                 docker rm -f test-recording
                 rm -rf "${TEST_RECORDING_DIR}"
+
+                # Cache ffmpeg binary
+                INSTALLATION_DIR="/opt/kms"
+                MEDIASOUP_IMAGE="$(grep MEDIASOUP_IMAGE "${INSTALLATION_DIR}"/docker-compose.yml | cut -d'=' -f2)"
+                docker run -it --entrypoint /ffmpeg "${MEDIASOUP_IMAGE}" -version
               mode: "000755"
               owner: "root"
               group: "root"
