--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Launch Selenium Chromedriver
-      run: docker run --shm-size="2g" --network host selenium/standalone-chrome:latest
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Launch Selenium Chromedriver
+      run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
     - name: Launch openvidu-server-kms
       run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
     - name: Install dependencies
