--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -16,17 +16,17 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
-    - name: Launch Selenium Chromedriver
+    - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
-    - name: Launch openvidu-server-kms
+    - name: Run openvidu-server-kms
       run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
     - name: Install dependencies
       run: |
         npm install --prefix openvidu-components-angular && \
         npm install --prefix openvidu-components-angular/webcomponent-test-e2e
-    - name: Build Webcomponent
+    - name: Prepare E2E Test - Building openvidu-angular and webcomponent
       run: npm run webcomponent:prepare-test-e2e --prefix openvidu-components-angular
-    - name: Start webapp
+    - name: Serve webapp
       run: npm run serve --prefix openvidu-components-angular/webcomponent-test-e2e &
-    - name: Running E2E tests
+    - name: Run E2E tests
       run: npm run test-ci --prefix openvidu-components-angular/webcomponent-test-e2e
