--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,40 +1,40 @@
 {
     "dependencies": {
-        "@angular/animations": "13.1.1",
-        "@angular/cdk": "13.1.1",
-        "@angular/common": "13.1.1",
-        "@angular/compiler": "13.1.1",
-        "@angular/core": "13.1.1",
-        "@angular/flex-layout": "13.0.0-beta.36",
-        "@angular/forms": "13.1.1",
-        "@angular/material": "13.1.1",
-        "@angular/platform-browser": "13.1.1",
-        "@angular/platform-browser-dynamic": "13.1.1",
-        "@angular/router": "13.1.1",
-        "core-js": "3.9.1",
+        "@angular/animations": "13.3.0",
+        "@angular/cdk": "13.3.0",
+        "@angular/common": "13.3.0",
+        "@angular/compiler": "13.3.0",
+        "@angular/core": "13.3.0",
+        "@angular/flex-layout": "13.0.0-beta.38",
+        "@angular/forms": "13.3.0",
+        "@angular/material": "13.3.0",
+        "@angular/platform-browser": "13.3.0",
+        "@angular/platform-browser-dynamic": "13.3.0",
+        "@angular/router": "13.3.0",
+        "core-js": "3.21.1",
         "jquery": "3.6.0",
         "openvidu-browser": "2.21.0",
-        "rxjs": "6.6.6",
-        "tslib": "2.1.0",
-        "zone.js": "~0.11.4"
+        "rxjs": "7.5.5",
+        "tslib": "2.3.1",
+        "zone.js": "0.11.5"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^13.2.6",
-        "@angular/cli": "13.1.2",
-        "@angular/compiler-cli": "13.1.1",
-        "@angular/language-service": "13.1.1",
+        "@angular-devkit/build-angular": "13.3.0",
+        "@angular/cli": "13.3.0",
+        "@angular/compiler-cli": "13.3.0",
+        "@angular/language-service": "13.3.0",
         "@types/jasmine": "3.6.6",
-        "@types/node": "14.14.32",
-        "codelyzer": "6.0.1",
-        "jasmine-core": "3.6.0",
-        "jasmine-spec-reporter": "6.0.0",
-        "karma": "^6.3.17",
-        "karma-chrome-launcher": "3.1.0",
+        "@types/node": "17.0.21",
+        "codelyzer": "6.0.2",
+        "jasmine-core": "4.0.1",
+        "jasmine-spec-reporter": "7.0.0",
+        "karma": "6.3.17",
+        "karma-chrome-launcher": "3.1.1",
         "karma-coverage-istanbul-reporter": "3.0.3",
         "karma-jasmine": "4.0.1",
-        "karma-jasmine-html-reporter": "1.5.4",
+        "karma-jasmine-html-reporter": "1.7.0",
         "protractor": "7.0.0",
-        "ts-node": "9.1.1",
+        "ts-node": "10.7.0",
         "tslint": "6.1.3",
         "typescript": "4.5.4"
     },
