--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -8,11 +8,13 @@
     "lib:build": "ng build openvidu-angular --configuration production && cd ./dist/openvidu-angular && npm pack",
     "lib:copy": "cp dist/openvidu-angular/openvidu-angular-*.tgz ../openvidu-tutorials/openvidu-angular-components",
     "lib:test": "ng test openvidu-angular --no-watch --code-coverage",
+    "lib:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/angular.test.js",
     "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js",
-    "webcomponent:prepare-test-e2e": "npm run lib:build && npm run webcomponent:build",
+    "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/",
+    "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent.test.js",
+    "webcomponent:e2e-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e",
     "bundle-report": "ng build openvidu-webcomponent --stats-json --configuration production && webpack-bundle-analyzer dist/openvidu-webcomponent/stats.json",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +29,6 @@
     "@angular/platform-browser-dynamic": "13.0.0",
     "@angular/router": "13.0.0",
     "autolinker": "3.14.3",
-    "buffer": "^6.0.3",
     "openvidu-browser": "^2.21.0",
     "rxjs": "7.4.0",
     "tslib": "2.3.1",
@@ -39,11 +40,16 @@
     "@angular/compiler": "13.0.0",
     "@angular/compiler-cli": "13.0.0",
     "@angular/elements": "13.0.0",
-    "@types/jasmine": "3.10.2",
-    "@types/jasminewd2": "2.0.10",
+    "@types/chai": "4.3.0",
+    "@types/mocha": "9.1.0",
     "@types/node": "16.11.6",
+    "@types/selenium-webdriver": "4.0.18",
+    "chai": "4.3.6",
+    "chromedriver": "99.0.0",
     "codelyzer": "6.0.2",
     "concat": "^1.0.3",
+    "cross-env": "^7.0.3",
+    "http-server": "14.1.0",
     "jasmine-core": "3.10.1",
     "jasmine-spec-reporter": "7.0.0",
     "karma": "^6.3.9",
@@ -55,8 +61,9 @@
     "karma-junit-reporter": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
     "karma-notify-reporter": "1.3.0",
+    "mocha": "9.2.2",
     "ng-packagr": "13.0.3",
-    "protractor": "7.0.0",
+    "selenium-webdriver": "4.1.1",
     "ts-node": "10.4.0",
     "tslint": "6.1.3",
     "typescript": "4.4.4",
