--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -8,25 +8,30 @@ on:
       - master
 
 jobs:
-  webcomponent_e2e:
-    name: WebComponent E2E tests
+
+  openvidu_angular_e2e:
+    name: E2E tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Install dependencies
+      run: npm install --prefix openvidu-components-angular
+    - name: Build openvidu-angular
+      run: npm run lib:build --prefix openvidu-components-angular
+    - name: Build openvidu-webcomponent
+      run: npm run webcomponent:build --prefix openvidu-components-angular
     - name: Run Selenium Chromedriver
       run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
     - name: Run openvidu-server-kms
       run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
-    - name: Install dependencies
+    - name: Run Angular E2E
       run: |
-        npm install --prefix openvidu-components-angular && \
-        npm install --prefix openvidu-components-angular/webcomponent-test-e2e
-    - name: Prepare E2E Test - Building openvidu-angular and webcomponent
-      run: npm run webcomponent:prepare-test-e2e --prefix openvidu-components-angular
-    - name: Serve webapp
-      run: npm run serve --prefix openvidu-components-angular/webcomponent-test-e2e &
-    - name: Run E2E tests
-      run: npm run test-ci --prefix openvidu-components-angular/webcomponent-test-e2e
+        npm run ng serve --prefix openvidu-components-angular &
+        npm run lib:e2e-ci --prefix openvidu-components-angular
+    - name: Run Webcomponent E2E
+      run: |
+        npm run webcomponent:serve-testapp --prefix openvidu-components-angular &
+        npm run webcomponent:e2e-ci --prefix openvidu-components-angular
