--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:
+
 
 jobs:
 
@@ -17,6 +19,10 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Run Selenium Chromedriver
+      run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
+    - name: Run openvidu-server-kms
+      run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
     - name: Install dependencies
       run: npm install --prefix openvidu-components-angular
     - name: Build openvidu-angular
@@ -25,10 +31,6 @@ jobs:
       run: npm run webcomponent:build --prefix openvidu-components-angular
     - name: Build openvidu-angular-testapp
       run: npm run build --prefix openvidu-components-angular
-    - name: Run Selenium Chromedriver
-      run: docker run -d --shm-size="2g" --network host selenium/standalone-chrome:latest
-    - name: Run openvidu-server-kms
-      run: docker run -p 4443:4443 --rm -d -e OPENVIDU_SECRET=MY_SECRET openvidu/openvidu-server-kms:latest
     - name: Run Angular E2E
       run: |
         npm run start-prod --prefix openvidu-components-angular &
