openvidu-components: Added e2e test for attribute directives

--- a/openvidu-components-angular/e2e/tsconfig.json
+++ b/openvidu-components-angular/e2e/tsconfig.json
@@ -5,11 +5,9 @@
 	  "module": "commonjs",
 	  "strict": true,
 	  "outDir": "./dist",
-	  "lib": [
-		"es6"
-	  ],
+	  "lib": ["es6"],
 	  "types": [ "mocha", "node" ],
 	  "experimentalDecorators": true,
 	  "emitDecoratorMetadata": true
-	}
+	},
   }
