--- a/openvidu-components-angular/angular.json
+++ b/openvidu-components-angular/angular.json
@@ -69,13 +69,12 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"browserTarget": "openvidu-components-testapp:build"
+						"browserTarget": "openvidu-components-testapp:build",
+						"proxyConfig": "src/proxy.config.json"
 					},
 					"configurations": {
 						"development": {
-							"browserTarget": "openvidu-components-testapp:build:development",
-							"proxyConfig": "src/proxy.config.json"
-
+							"browserTarget": "openvidu-components-testapp:build:development"
 						},
 						"production": {
 							"browserTarget": "openvidu-components-testapp:build:production"
